force-app/main/default/objects/Training_Task_Assignment__c/Training_Task_Assignment__c.object-meta.xml
<CustomObject>
    <description>Junction Object. Individual training tasks that are assigned to an employee.</description>
    <label>Training Task Assignment</label>
    <nameField>
        <displayFormat>TTA-{0000}</displayFormat>
        <label>Training Task Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Task Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>