force-app/main/default/objects/Training_Task_Assignment__c/fields/Actual_Mins__c.field-meta.xml
<CustomField>
    <fullName>Actual_Mins__c</fullName>
    <inlineHelpText>Actual minutes taken to complete the task.</inlineHelpText>
    <label>Actual Mins.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>