force-app/main/default/objects/Training_Task_Assignment__c/fields/Blockers__c.field-meta.xml
<CustomField>
    <fullName>Blockers__c</fullName>
    <inlineHelpText>What is blocking you from completing this task?</inlineHelpText>
    <label>Blockers</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>