force-app/main/default/objects/Training_Task_Assignment__c/fields/Duration_Mins__c.field-meta.xml
<CustomField>
    <fullName>Duration_Mins__c</fullName>
    <description>Expected number of minutes required. to complete the task.</description>
    <formula>Training_Task__r.Duration_Mins__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Expected number of minutes required. to complete the task.</inlineHelpText>
    <label>Duration Mins.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>