force-app/main/default/objects/Training_Task_Assignment__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <formula>HYPERLINK(
  &apos;/lightning/r/Contact/&apos; +  Contact__r.Id  + &apos;/view&apos;,
  Contact__r.FirstName + &quot; &quot; + Contact__r.LastName,
  &quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Name</label>
    <type>Text</type>
</CustomField>