force-app/main/default/objects/Training_Task_Assignment__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Training Task Assignments</relationshipLabel>
    <relationshipName>Training_Task_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>