force-app/main/default/objects/Training_Task_Assignment__c/fields/Program_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Program_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Assignment</label>
    <referenceTo>Program_Assignment__c</referenceTo>
    <relationshipLabel>Training Task Assignments</relationshipLabel>
    <relationshipName>Training_Task_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>