force-app/main/default/objects/Training_Task_Assignment__c/fields/Training_Task__c.field-meta.xml
<CustomField>
    <fullName>Training_Task__c</fullName>
    <label>Training Task</label>
    <referenceTo>Training_Task__c</referenceTo>
    <relationshipLabel>Training Task Assignments</relationshipLabel>
    <relationshipName>Training_Task_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>