force-app/main/default/objects/Training_Task_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Program_Assignment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>